(lang dune 3.10)

(name ocaml99)

(generate_opam_files true)

(source
 (github marcfyk/ocaml99))

(authors "Marc Fong")

(maintainers "Marc Fong")

(license MIT)

(documentation https://github.com/marcfyk/ocaml99)

(package
 (name ocaml99)
 (synopsis "Solutions for exercises in the offical ocaml website")
 (description "Solutions for exercises in the official ocaml website")
 (depends ocaml dune)
 (tags ()))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
